# batchest

./: Cargo.toml  Dockerfile  Makefile  docker-compose.yml
.github/workflows/: build.yml
src/: main.rs
