[package]
name = "batchest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", default-features = false, features = ["client", "cache", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.2.0"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }